--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="custom">#ffffff</color>
     <color name="transparent">#80ffffff</color>
+    <color name="splashBackground">#6cc077</color>
+    <color name="splashBackground2">#a2d4de</color>
 </resources>
