Added splash screen and fixed the asking for permission bug

--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:background="@color/splashBackground2"
     android:layout_height="match_parent">
-
     <ImageView
         android:id="@+id/foodyLogo"
         android:layout_width="100dp"
@@ -15,4 +14,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.451"
         app:srcCompat="@drawable/applogo" />
+
+    <TextView
+        android:textStyle="bold"
+        android:textColor="@android:color/background_light"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Developed by : Karim Hekal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/foodyLogo"
+        app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
